--- a/BspViewer.Desktop/BspViewer.Desktop.csproj
+++ b/BspViewer.Desktop/BspViewer.Desktop.csproj
@@ -47,10 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\Camera.cs" />
-    <Compile Include="Utils\MathLib.cs" />
     <Compile Include="Renderer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\MathLib.cs" />
+    <Compile Include="Utils\TexUtil.cs" />
     <Compile Include="Viewer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,5 +66,6 @@
       <Name>BspViewer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
